<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jazz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.musicalappstructure.jazz">
    <TextView
        style="@style/textviewtheme"
        android:text="@string/jazztext"/>

    <RelativeLayout
        style="@style/relativelayout"
        >

        <ImageView
            style="@style/songimage"
            android:id="@+id/songimage3"
            android:src="@drawable/play"/>
        <TextView
            android:text="@string/song3"
            style="@style/songnametext"
            android:layout_toRightOf="@id/songimage3"
            android:id="@+id/song3name"
            />
        <TextView
            style="@style/relativelayout"
            android:layout_height="80dp"
            android:id="@+id/song3"/>
        <TextView
            android:text="@string/song3singer"
            style="@style/singername"
            android:layout_below="@id/song3name"
            android:layout_toRightOf="@id/songimage3"
            />
    </RelativeLayout>
    <TextView
        style="@style/linesep" />

    <RelativeLayout
        style="@style/relativelayout"
        >

        <ImageView
            style="@style/songimage"
            android:id="@+id/songimage4"
            android:src="@drawable/play"/>
        <TextView
            android:text="@string/song4"
            style="@style/songnametext"
            android:layout_toRightOf="@id/songimage4"
            android:id="@+id/song4name"
            />
        <TextView
            style="@style/relativelayout"
            android:layout_height="80dp"
            android:id="@+id/song4"/>
        <TextView
            android:text="@string/song4singer"
            style="@style/singername"
            android:layout_below="@id/song4name"
            android:layout_toRightOf="@id/songimage4"
            />
    </RelativeLayout>
    <TextView
        style="@style/linesep" />
</LinearLayout>
