<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.musicalappstructure.dance">
    <TextView
        style="@style/textviewtheme"
        android:text="@string/dancetext"/>
    <RelativeLayout
        style="@style/relativelayout"
        >

        <ImageView
            style="@style/songimage"
            android:id="@+id/songimage5"
            android:src="@drawable/play"/>
        <TextView
            android:text="@string/song5"
            style="@style/songnametext"
            android:layout_toRightOf="@id/songimage5"
            android:id="@+id/song5name"
            />
        <TextView
            style="@style/relativelayout"
            android:layout_height="80dp"
            android:id="@+id/song5"/>
        <TextView
            android:text="@string/song5singer"
            style="@style/singername"
            android:layout_below="@id/song5name"
            android:layout_toRightOf="@id/songimage5"
            />
    </RelativeLayout>
    <TextView
        style="@style/linesep" />

    <RelativeLayout
        style="@style/relativelayout"
        >

        <ImageView
            style="@style/songimage"
            android:id="@+id/songimage6"
            android:src="@drawable/play"/>
        <TextView
            android:text="@string/song6"
            style="@style/songnametext"
            android:layout_toRightOf="@id/songimage6"
            android:id="@+id/song6name"
            />
        <TextView
            style="@style/relativelayout"
            android:layout_height="80dp"
            android:id="@+id/song6"/>
        <TextView
            android:text="@string/song6singer"
            style="@style/singername"
            android:layout_below="@id/song6name"
            android:layout_toRightOf="@id/songimage6"
            />
    </RelativeLayout>
    <TextView
        style="@style/linesep" />
</LinearLayout>
